# quiz_taxons

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  main.py  nature.csv  pyproject.toml  rando.csv
quiz/: settings.py  urls.py
taxons/: admin.py  apps.py  models.py  tests.py  urls.py  utils.py  views.py
taxons/management/commands/: import_taxons.py
taxons/migrations/: 0001_initial.py  0002_remove_google_fields.py  0003_taxon_category.py  0004_taxon_dataset.py  0005_taxon_inaturalist_taxon_id.py
taxons/templates/taxons/: answer_images.html  images_grid.html  index.html  result.html  scores_portlet.html  taxonomy_select.html
