[project]
name = "quiz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.8",
    "django-htmx>=1.26.0",
    "gunicorn>=23.0.0",
    "ipdb>=0.13.13",
    "pdfplumber>=0.11.8",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "whitenoise>=6.11.0",
]
